[package]
name = "advent_of_rust_2023"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bench]]
name = "all_benchmarks"
harness = false
